--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,11 +2,14 @@ recursive-include ibmdbpy *.txt
 recursive-include ibmdbpy *.py
 recursive-include docs *
 
+
 include LICENSE.txt
 include MANIFEST.in
+include DEPLOY.txt
 include README.rst
 include setup.cfg
 include *.gitignore
 
 prune docs/build
 prune ibmdbpy/feature_selection
+recursive-excluse *.jar
