Use SSL for connecting to Db2 in tests
This implicitly increases the test coverage a bit.

--- a/mv_to_docker/odbc.ini.sample
+++ b/mv_to_docker/odbc.ini.sample
@@ -12,5 +12,6 @@ Driver      = /tmp/dsdriver/lib/libdb2o.so
 Description = DashDB connection
 DATABASE    = BLUDB
 HOSTNAME    = DASHDBHOST
-PORT        = 50000
+PORT        = 50001
 PROTOCOL    = TCPIP
+SECURITY    = SSL
