--- a/mv_to_docker/db2dsdriver.cfg.sample
+++ b/mv_to_docker/db2dsdriver.cfg.sample
@@ -1,11 +1,13 @@
 <?xml version=1.0 encoding=UTF-8 standalone=no ?>
 <configuration>
   <databases>
-    <database host="DASHDBHOST" name="BLUDB" port="50000"/>
+    <database host="DASHDBHOST" name="BLUDB" port="50001"/>
   </databases>
 
   <dsncollection>
-    <dsn alias="BLUMIX" host="DASHDBHOST" name="BLUDB" port="50000"/>
+    <dsn alias="BLUMIX" host="DASHDBHOST" name="BLUDB" port="50001">
+      <parameter name="SecurityTransportMode" value="SSL"/>
+    </dsn>
   </dsncollection>
 
 </configuration>
