Fix for issues 24 and 31 and changes of references to dashDB/DASHDB to Db2 Warehouse/BLUDB

--- a/mv_to_docker/odbc.ini.sample
+++ b/mv_to_docker/odbc.ini.sample
@@ -9,9 +9,9 @@ TraceLibrary  =
 
 [BLUMIX]
 Driver      = /tmp/dsdriver/lib/libdb2o.so 
-Description = DashDB connection
+Description = DB2 Warehouse connection
 DATABASE    = BLUDB
-HOSTNAME    = DASHDBHOST
+HOSTNAME    = DB2HOST
 PORT        = 50001
 PROTOCOL    = TCPIP
 SECURITY    = SSL
