Fix for issues 24 and 31 and changes of references to dashDB/DASHDB to Db2 Warehouse/BLUDB

--- a/mv_to_docker/db2dsdriver.cfg.sample
+++ b/mv_to_docker/db2dsdriver.cfg.sample
@@ -1,11 +1,11 @@
 <?xml version=1.0 encoding=UTF-8 standalone=no ?>
 <configuration>
   <databases>
-    <database host="DB2HOST" name="BLUDB" port="50001"/>
+    <database host="DASHDBHOST" name="BLUDB" port="50001"/>
   </databases>
 
   <dsncollection>
-    <dsn alias="BLUMIX" host="DB2HOST" name="BLUDB" port="50001">
+    <dsn alias="BLUMIX" host="DASHDBHOST" name="BLUDB" port="50001">
       <parameter name="SecurityTransportMode" value="SSL"/>
     </dsn>
   </dsncollection>
