--- a/mv_to_docker/odbc.ini.sample
+++ b/mv_to_docker/odbc.ini.sample
@@ -11,7 +11,7 @@ TraceLibrary  =
 Driver      = /tmp/dsdriver/lib/libdb2o.so 
 Description = DB2 Warehouse connection
 DATABASE    = BLUDB
-HOSTNAME    = DB2HOST
+HOSTNAME    = DASHDBHOST
 PORT        = 50001
 PROTOCOL    = TCPIP
 SECURITY    = SSL
